--- a/stylees.css
+++ b/stylees.css
@@ -364,6 +364,15 @@
 }
 
 @media screen and (max-width:600px) {
+
+    .page-container {
+        grid-template-columns: 40px 1fr 40px;
+    }
+
+    .article {
+        grid-template-columns: 1fr;
+    }
+
     .gallery-section3 {
         grid-template-columns: 1fr;
     }
